Deleted & updated code

--- a/index.html
+++ b/index.html
@@ -26,6 +26,26 @@
                 <button>Download Resume</button>
             </div>
         </section>
+        <section class="mySkills">
+            <h1>My UX Skills</h1>
+            <div class="flexContainer">
+                <div>
+                    <img src="Images\jason-goodman-m2TU2gfqSeE-unsplash.jpg" alt="girl looking at sticky notes">
+                    <h3>User Research</h3>
+                    <p> This is info on my user research skills.</p>
+                </div>
+                <div>
+                    <img src="Images\uby-yanes-i8-elfUPiNU-unsplash.jpg" alt="girl looking at camera and notes">
+                    <h3>Branding</h3>
+                    <p> This is info on my branding skills.</p>
+                </div>
+                <div>
+                    <img src="Images\jason-goodman-6WR1FmbVbUE-unsplash.jpg" alt="girl looking at computer">
+                    <h3>Information Architecture</h3>
+                    <p> This is info on my information architecture skills.</p>
+                </div>
+            </div>
+        </section>
         <footer>
             <ul>
                 <li class="inline-block">About</li>
