Added images and updated code

--- a/index.html
+++ b/index.html
@@ -1,58 +1,49 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="CSS\index.css">
-        <title></title>
+        <title>UX/UI Homework 18</title>
     </head>
     <body>
-        <header class="navigation">
-            <div class="inline-block logo">
-                <img src="Images\CE.png" alt="logo">
-            </div>
-            <nav class="inline-block">
-                <ul>
-                    <li class="inline-block">About</li>
-                    <li class="inline-block">Skills</li>
-                    <li class="inline-block">Work</li>
-                    <li class="inline-block">Contact</li>
-                </ul>
-            </nav>
-        </header>
-        <section class="heroImg">
-            <div class="content">
-                <img src="Images\IMG_1712.png" alt="Girl in sunflower field">
-                <p>Hi! I'm Casey Evangelista, a product designer based in Northern Virginia.</p>
-                <h1>I tackle complex problems with creative solutions, and design user-centered products that drive positive growth in businesses.</h1>
-                <button>Download Resume</button>
-            </div>
-        </section>
-        <section class="mySkills">
-            <h1>My UX Skills</h1>
+        <section class="myToolbelt">
+            <h1>My Toolbelt</h1>
             <div class="flexContainer">
-                <div>
-                    <img src="Images\jason-goodman-m2TU2gfqSeE-unsplash.jpg" alt="girl looking at sticky notes">
-                    <h3>User Research</h3>
-                    <p> This is info on my user research skills.</p>
+                <div class="UXUIDesign">
+                    <img src="Images\jason-goodman-m2TU2gfqSeE-unsplash.jpg" alt="sticky notes on wall">
+                    <h2>UX/UI Design</h2>
+                    <ul>
+                        <li>User research</li>
+                        <li>Competitor analysis</li>
+                        <li>Prototyping</li>
+                        <li>Information architecture</li>
+                        <li>Interaction design</li>
+                    </ul>
                 </div>
-                <div>
-                    <img src="Images\uby-yanes-i8-elfUPiNU-unsplash.jpg" alt="girl looking at camera and notes">
-                    <h3>Branding</h3>
-                    <p> This is info on my branding skills.</p>
+                <div class="frontend">
+                    <img src="Images\jason-goodman-6WR1FmbVbUE-unsplash.jpg" alt="girl on computer">
+                    <h2>Front End Development</h2>
+                    <ul>
+                        <li>HTML/CSS</li>
+                        <li>Javascript</li>
+                        <li>Responsive design</li>
+                    </ul>
                 </div>
-                <div>
-                    <img src="Images\jason-goodman-6WR1FmbVbUE-unsplash.jpg" alt="girl looking at computer">
-                    <h3>Information Architecture</h3>
-                    <p> This is info on my information architecture skills.</p>
+                <div class="branding">
+                    <img src="Images/uby-yanes-i8-elfUPiNU-unsplash.jpg" alt="girl with camera">
+                    <h2>Branding strategy</h2>
+                    <ul>
+                        <li>Journey mapping</li>
+                        <li>Style guide development</li>
+                        <li>Copywriting</li>
+                        <li>Social media management</li>
+                    </ul>
                 </div>
             </div>
         </section>
-        <footer>
-            <ul>
-                <li class="inline-block">About</li>
-                <li class="inline-block">Skills</li>
-                <li class="inline-block">Work</li>
-                <li class="inline-block">Contact</li>
-            </ul>
-        </footer>
+
+        <section class="myWork">
+            <h1>My Work</h1>
+            <div class="workGrid">
+            </div>
+        </section>
     </body>
 </html>
