--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html>
     <head>
         <title>UX/UI Homework 18</title>
+        <link rel="stylesheet" href="CSS\index.css">
     </head>
     <body>
+        <!--Coded using CSS flex-->
         <section class="myToolbelt">
             <h1>My Toolbelt</h1>
             <div class="flexContainer">
@@ -43,6 +45,36 @@
         <section class="myWork">
             <h1>My Work</h1>
             <div class="workGrid">
+                <div class="Solefit">
+                    <div class="shoeimg">
+                        <img src="Images\shoes.png" alt="shoes">
+                    </div>
+                    <div class="shoecontent">
+                        <h2>SoleFit</h2>
+                        <p>A mobile app that allows users to accurately measure their shoe size using AR technology.</p>
+                        <button type="button">View Project</button>
+                    </div>
+                </div>
+                <div class="AIATSIS">
+                    <div class="AIATSISimg">
+                        <img src="Images\Mockup Mobile.png" alt="phone">
+                    </div>
+                    <div class="AIATSIScontent">
+                        <h2>AIATSIS Website Redesign</h2>
+                        <p>A redesign of Austrailian Institute of Aboriginal and Torres Strait Islander Studies'(AIATSIS) website.</p>
+                        <button type="button">View Project</button>
+                    </div>
+                </div>
+                <div class="redesigns">
+                    <div class="redesignImg">
+                        <img src="Images\Sign Up Form.png" alt="phone mockups">
+                    </div>
+                    <div class="redesignContent">
+                        <h2>Redesigns</h2>
+                        <p>A mixture of freeland projects and UI challenges.</p>
+                        <button type="button">View Project</button>
+                    </div>
+                </div>
             </div>
         </section>
     </body>
