--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             <div class="flexContainer">
                 <div class="UXUIDesign">
                     <img src="Images\jason-goodman-m2TU2gfqSeE-unsplash.jpg" alt="sticky notes on wall">
+                    <div class="UXUIcontent">
                     <h2>UX/UI Design</h2>
                     <ul>
                         <li>User research</li>
@@ -19,18 +20,22 @@
                         <li>Information architecture</li>
                         <li>Interaction design</li>
                     </ul>
+                    </div>
                 </div>
                 <div class="frontend">
                     <img src="Images\jason-goodman-6WR1FmbVbUE-unsplash.jpg" alt="girl on computer">
+                    <div class="frontendcontent">
                     <h2>Front End Development</h2>
                     <ul>
                         <li>HTML/CSS</li>
                         <li>Javascript</li>
                         <li>Responsive design</li>
                     </ul>
+                    </div>
                 </div>
                 <div class="branding">
                     <img src="Images/uby-yanes-i8-elfUPiNU-unsplash.jpg" alt="girl with camera">
+                    <div class="brandingcontent">
                     <h2>Branding strategy</h2>
                     <ul>
                         <li>Journey mapping</li>
@@ -38,6 +43,7 @@
                         <li>Copywriting</li>
                         <li>Social media management</li>
                     </ul>
+                    </div>
                 </div>
             </div>
         </section>
