--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="CSS\index.css">
     </head>
     <body>
-        <!--Coded using CSS flex-->
+<!--Coded using CSS flex-->
         <section class="myToolbelt">
             <h1>My Toolbelt</h1>
             <div class="flexContainer">
@@ -50,36 +50,31 @@
 
         <section class="myWork">
             <h1>My Work</h1>
+<!--Coded using CSS grid-->
             <div class="workGrid">
-                <div class="Solefit">
-                    <div class="shoeimg">
-                        <img src="Images\shoes.png" alt="shoes">
-                    </div>
-                    <div class="shoecontent">
-                        <h2>SoleFit</h2>
-                        <p>A mobile app that allows users to accurately measure their shoe size using AR technology.</p>
-                        <button type="button">View Project</button>
-                    </div>
+                <div class="Solefitimg">
+                    <img src="Images\shoes.png" alt="shoes">
+                </div>
+                <div class="solefitContent">
+                    <h2>Solefit</h2>
+                    <p>A mobile app that allows users to accurately measure their shoe size using AR technology.</p>
+                    <button type="button">View Project</button>
                 </div>
                 <div class="AIATSIS">
-                    <div class="AIATSISimg">
-                        <img src="Images\Mockup Mobile.png" alt="phone">
-                    </div>
-                    <div class="AIATSIScontent">
-                        <h2>AIATSIS Website Redesign</h2>
-                        <p>A redesign of Austrailian Institute of Aboriginal and Torres Strait Islander Studies'(AIATSIS) website.</p>
-                        <button type="button">View Project</button>
-                    </div>
+                    <img src="Images\Mockup Mobile.png" alt="iphone">
+                </div>
+                <div class="AIATSIScontent">
+                    <h2>AIATSIS Website Redesign</h2>
+                    <p>A redesign of Australian Institute of Aboriginal and Torres Strait Islander Studies’ (AIATSIS) website.</p>
+                    <button type="button">View Project</button>
                 </div>
                 <div class="redesigns">
-                    <div class="redesignImg">
-                        <img src="Images\Sign Up Form.png" alt="phone mockups">
-                    </div>
-                    <div class="redesignContent">
-                        <h2>Redesigns</h2>
-                        <p>A mixture of freeland projects and UI challenges.</p>
-                        <button type="button">View Project</button>
-                    </div>
+                    <img src="Images\Sign Up Form.png" alt="phone mockups">
+                </div>
+                <div class="redesignscontent">
+                    <h2>Redesigns</h2>
+                    <p>A mixture of freeland projects and UI challenges.</p>
+                    <button type="button">View Project</button>
                 </div>
             </div>
         </section>
