--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             <h1>My Toolbelt</h1>
             <div class="flexContainer">
                 <div class="UXUIDesign">
-                    <img src="Images\jason-goodman-m2TU2gfqSeE-unsplash.jpg" alt="sticky notes on wall">
+                    <img src="Images/Rectangle 1.png" alt="sticky notes on wall">
                     <div class="UXUIcontent">
                     <h2>UX/UI Design</h2>
                     <ul>
@@ -23,7 +23,7 @@
                     </div>
                 </div>
                 <div class="frontend">
-                    <img src="Images\jason-goodman-6WR1FmbVbUE-unsplash.jpg" alt="girl on computer">
+                    <img src="Images/Rectangle 2.png" alt="girl on computer">
                     <div class="frontendcontent">
                     <h2>Front End Development</h2>
                     <ul>
@@ -34,7 +34,7 @@
                     </div>
                 </div>
                 <div class="branding">
-                    <img src="Images/uby-yanes-i8-elfUPiNU-unsplash.jpg" alt="girl with camera">
+                    <img src="Images/Rectangle 3.png" alt="girl with camera">
                     <div class="brandingcontent">
                     <h2>Branding strategy</h2>
                     <ul>
@@ -53,7 +53,7 @@
 <!--Coded using CSS grid-->
             <div class="workGrid">
                 <div class="Solefitimg">
-                    <img src="Images\shoes.png" alt="shoes">
+                    <img src="Images/Rectangle 37.png" alt="shoes mockup">
                 </div>
                 <div class="solefitContent">
                     <h2>Solefit</h2>
@@ -61,7 +61,7 @@
                     <button type="button">View Project</button>
                 </div>
                 <div class="AIATSIS">
-                    <img src="Images\Mockup Mobile.png" alt="iphone">
+                    <img src="Images/Rectangle 40.png" alt="iphone">
                 </div>
                 <div class="AIATSIScontent">
                     <h2>AIATSIS Website Redesign</h2>
@@ -69,7 +69,7 @@
                     <button type="button">View Project</button>
                 </div>
                 <div class="redesigns">
-                    <img src="Images\Sign Up Form.png" alt="phone mockups">
+                    <img src="Images/Rectangle 41.png" alt="phone mockups">
                 </div>
                 <div class="redesignscontent">
                     <h2>Redesigns</h2>
