--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 </div>
                 <div class="redesignscontent">
                     <h2>Redesigns</h2>
-                    <p>A mixture of freeland projects and UI challenges.</p>
+                    <p>A mixture of freelance projects and UI challenges.</p>
                     <button type="button">View Project</button>
                 </div>
             </div>
